Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-1525

Missing pure virtual method in Windows AsynchIO.cpp

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • M4
    • M4
    • C++ Broker, C++ Client
    • None
    • Windows

    Description

      svn rev 724233 added a pure virtual method to qpid/sys/AsynchIO.h which was not added to qpid/sys/windows/AsynchIO.cpp. This causes the common lib compile to fail. Must be fixed for M4.

      Attachments

        Activity

          People

            shuston Stephen D. Huston
            shuston Stephen D. Huston
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: