Add startReading() method required by sys::AsynchIO. Fixes QPID-1525.

git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/qpid/trunk@725486 13f79535-47bb-0310-9956-ffa450edef68